RAG-FRONTEND-INTEGRATED