@@ -10,7 +10,19 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @Slf4j
 public class FileProcessorService {
-    private final Tika tika = new Tika();
+    private final Tika tika;
+
+    public FileProcessorService() {
+        try {
+            // Initialize Tika with default config
+            // This may trigger reflection access if JVM args aren't set
+            log.info("Initializing Tika for document parsing...");
+            this.tika = new Tika();
+        } catch (Exception e) {
+            log.warn("Error during Tika initialization: {}", e.getMessage());
+            throw new RuntimeException("Failed to initialize Tika. Ensure JVM args: --add-opens java.base/java.nio.charset=ALL-UNNAMED", e);
+        }
+    }
 
     public String extract(byte[] fileContent, String fileName) {
 
@@ -20,6 +32,14 @@ public class FileProcessorService {
             return text;
         } catch (Exception e) {
             log.error("Error parsing file {}: {}", fileName, e.getMessage(), e);
+            // Re-throw with more context if it's an InaccessibleObjectException
+            if (e.getCause() != null && e.getCause().getClass().getSimpleName().contains("InaccessibleObject")) {
+                throw new RuntimeException(
+                    "Module access denied for Tika. Ensure JVM is started with: " +
+                    "--add-opens java.base/java.nio.charset=ALL-UNNAMED " +
+                    "--add-opens java.base/java.lang=ALL-UNNAMED " +
+                    "--add-opens java.base/java.util=ALL-UNNAMED", e);
+            }
             return null;
         }
 
@@ -45,3 +65,4 @@ public class FileProcessorService {
 
     }
 }
+
